infra/controllers/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    # Optional: set sync waves if using ArgoCD
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
      sectionName: http
    - name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "argocd.drogon.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          kind: Service
          port: 8080
          weight: 1
